# ltk-forge

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  cliff.toml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json  vite.config.ts
.claude/skills/wadtools/: SKILL.md
.github/workflows/: ci.yml  release-prepare.yml  release.yml
apps/forge/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/forge/src/: routeTree.gen.ts
apps/forge/src/lib/: form.tsx  (+1 more)
docs/: DEVELOPMENT.md  MAP_EDITOR.md  SETUP_SUMMARY.md
specs/001-frontend-monorepo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-monorepo/checklists/: requirements.md
specs/002-tauri-app-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-commitlint-release-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-component-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-project-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-form-components/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/project/: commands.rs  mod.rs  scanner.rs  scratch.rs
src/components/: Button.tsx
src/routes/: __root.tsx  about.tsx  index.tsx
(+28 files in other folders)
